Added missing translations.

--- a/translations/validators.cs.po
+++ b/translations/validators.cs.po
@@ -14,7 +14,7 @@ msgid "Email cannot be longer than {{ limit }} characters"
 msgstr "E-mail nesmí být delší než {{ limit }} znaků"
 
 msgid "Externí ID nesmí být delší než {{ limit }} znaků"
-msgstr ""
+msgstr "Externí ID nesmí být delší než {{ limit }} znaků"
 
 msgid "First name cannot be longer than {{ limit }} characters"
 msgstr "Jméno nesmí být delší než {{ limit }} znaků"
@@ -26,7 +26,7 @@ msgid "Heading (H1) cannot be longer than {{ limit }} characters"
 msgstr "Nadpis (H1) nesmí být delší než {{ limit }} znaků"
 
 msgid "Hodiny musí být v rozmezí od 0 do 23"
-msgstr ""
+msgstr "Hodiny musí být v rozmezí od 0 do 23"
 
 msgid "Identification number cannot be longer than {{ limit }} characters"
 msgstr "IČO nesmí být delší než {{ limit }} znaků"
@@ -38,7 +38,7 @@ msgid "Last name cannot be longer than {{ limit }} characters"
 msgstr "Příjmení nesmí být delší než {{ limit }} znaků"
 
 msgid "Minuty musí být v rozmezí od 0 do 59"
-msgstr ""
+msgstr "Minuty musí být v rozmezí od 0 do 59"
 
 msgid "Musíte vybrat dopravce"
 msgstr "Musíte vybrat dopravce"
@@ -107,7 +107,7 @@ msgid "Please enter first name"
 msgstr "Vyplňte své jméno"
 
 msgid "Please enter identification number"
-msgstr "Vyplňte IČ"
+msgstr "Vyplňte IČO"
 
 msgid "Please enter last name"
 msgstr "Vyplňte své příjmení"
@@ -152,10 +152,10 @@ msgid "Position in list cannot be longer than {{ limit }} characters"
 msgstr "Pořadí na výpisu nesmí být delší než {{ limit }} znaků"
 
 msgid "Poznámka nesmí být delší než {{ limit }} znaků"
-msgstr ""
+msgstr "Poznámka nesmí být delší než {{ limit }} znaků"
 
 msgid "Počet dnů do dodání musí být větší nebo roven nule"
-msgstr ""
+msgstr "Počet dnů do dodání musí být větší nebo roven nule"
 
 msgid "Price must be greater or equal to zero"
 msgstr "Cena musí být větší nebo rovna nule"
@@ -176,10 +176,10 @@ msgid "Tax number cannot be longer than {{ limit }} characters"
 msgstr "DIČ nesmí být delší než {{ limit }} znaků"
 
 msgid "Telefonní číslo musí být platné"
-msgstr ""
+msgstr "Telefonní číslo musí být platné"
 
 msgid "Telefonní číslo musí začínat znakem +"
-msgstr ""
+msgstr "Telefonní číslo musí začínat znakem +"
 
 msgid "Telephone number cannot be longer than {{ limit }} characters"
 msgstr "Telefonní číslo nesmí být delší než {{ limit }} znaků"
@@ -191,13 +191,13 @@ msgid "Uploaded image is to large ({{ size }} {{ suffix }}). Maximum size of an 
 msgstr "Nahraný obrázek je příliš veliký ({{ size }} {{ suffix }}). Maximální velikost obrázku je {{ limit }} {{ suffix }}."
 
 msgid "Vložené ID Youtube videa neobsahuje žádné video."
-msgstr ""
+msgstr "Vložené ID Youtube videa neobsahuje žádné video."
 
 msgid "Vyberte prosím pobočku"
-msgstr "Vyber pobočku"
+msgstr "Vyberte pobočku"
 
 msgid "Vyplňte prosím SKU dárkového certifikátu."
-msgstr "Vyplňte SKU dárkového certifikátu."
+msgstr "Vyplňte SKU dárkového poukazu."
 
 msgid "Vyplňte prosím deadline pro přijímání objednávek"
 msgstr "Vyplňte deadline pro přijímání objednávek"
@@ -209,7 +209,7 @@ msgid "Vyplňte prosím množství."
 msgstr "Vyplňte množství."
 
 msgid "Vyplňte prosím nominální hodnotu dárkového certifikátu."
-msgstr "Vyplňte nominální hodnotu dárkového certifikátu."
+msgstr "Vyplňte nominální hodnotu dárkového poukazu."
 
 msgid "Vyplňte prosím nominální hodnotu slevy."
 msgstr "Vyplňte nominální hodnotu slevy."
@@ -243,4 +243,3 @@ msgstr "Zadejte celé číslo."
 
 msgid "Zip code cannot be longer than {{ limit }} characters"
 msgstr "PSČ nesmí být delší než {{ limit }} znaků"
-
