--- a/translations/validators.sk.po
+++ b/translations/validators.sk.po
@@ -5,22 +5,22 @@ msgstr ""
 "Language: sk\n"
 
 msgid "City name cannot be longer than {{ limit }} characters"
-msgstr "Názov mesta nesmie byť dlhší ako {{limit}} znakov"
+msgstr "Názov mesta nesmie byť dlhší ako {{ limit }} znakov"
 
 msgid "Company name cannot be longer than {{ limit }} characters"
-msgstr "Názov spoločnosti nesmie byť dlhší ako {{limit}} znakov"
+msgstr "Názov spoločnosti nesmie byť dlhší ako {{ limit }} znakov"
 
 msgid "Email cannot be longer than {{ limit }} characters"
-msgstr "E-mail nesmie mať viac ako {{limit}} znakov"
+msgstr "E-mail nesmie mať viac ako {{ limit }} znakov"
 
 msgid "Externí ID nesmí být delší než {{ limit }} znaků"
 msgstr "Externé ID nesmie byť dlhšie ako {{limit}} znakov"
 
 msgid "First name cannot be longer than {{ limit }} characters"
-msgstr "Krstné meno nesmie byť dlhšie ako {{limit}} znakov"
+msgstr "Krstné meno nesmie byť dlhšie ako {{ limit }} znakov"
 
 msgid "Google Maps link cannot be longer than {{ limit }} characters"
-msgstr "Odkaz na Mapy Google nesmie byť dlhší ako {{limit}} znakov"
+msgstr "Odkaz na Mapy Google nesmie byť dlhší ako {{ limit }} znakov"
 
 msgid "Heading (H1) cannot be longer than {{ limit }} characters"
 msgstr "Heading (H1) cannot be longer than {{ limit }} characters"
@@ -35,22 +35,22 @@ msgid "Image can be only in JPG, GIF or PNG format"
 msgstr "Obrázok môže byť iba vo formáte JPG, GIF alebo PNG"
 
 msgid "Last name cannot be longer than {{ limit }} characters"
-msgstr "Priezvisko nesmie byť dlhšie ako {{limit}} znakov"
+msgstr "Priezvisko nesmie byť dlhšie ako {{ limit }} znakov"
 
 msgid "Minuty musí být v rozmezí od 0 do 59"
 msgstr "Minúty musia byť v rozmedzí od 0 do 59"
 
 msgid "Musíte vybrat dopravce"
-msgstr "Musíš vybrať dopravcu"
+msgstr "Musíte vybrať dopravcu"
 
 msgid "Musíte vybrat službu dopravce"
-msgstr "Musíš vybrať službu dopravcu"
+msgstr "Musíte vybrať službu dopravcu"
 
 msgid "Name cannot be longer than {{ limit }} characters"
-msgstr "Názov nesmie obsahovať viac ako {{limit}} znakov"
+msgstr "Názov nesmie obsahovať viac ako {{ limit }} znakov"
 
 msgid "Opening hours cannot be longer than {{ limit }} characters"
-msgstr "Otváracie hodiny nesmú byť dlhšie ako {{limit}} znakov"
+msgstr "Otváracie hodiny nesmú byť dlhšie ako {{ limit }} znakov"
 
 msgid "Password cannot be same as e-mail"
 msgstr "Heslo nemôže byť rovnaké ako e-mail"
@@ -149,10 +149,10 @@ msgid "Pokud chcete informační řádek uživatelům zobrazit, musíte jej vypl
 msgstr "Pokiaľ chcete informačný riadok používateľom zobraziť, musíš ho vyplniť"
 
 msgid "Position in list cannot be longer than {{ limit }} characters"
-msgstr "Pozícia v zozname nesmie byť dlhšia ako {{limit}} znakov"
+msgstr "Pozícia v zozname nesmie byť dlhšia ako {{ limit }} znakov"
 
 msgid "Poznámka nesmí být delší než {{ limit }} znaků"
-msgstr "Poznámka nesmie byť dlhšia ako {{limit}} znakov"
+msgstr "Poznámka nesmie byť dlhšia ako {{ limit }} znakov"
 
 msgid "Počet dnů do dodání musí být větší nebo roven nule"
 msgstr "Počet dní do dodania musí byť väčší alebo rovný nule"
@@ -161,19 +161,19 @@ msgid "Price must be greater or equal to zero"
 msgstr "Cena musí byť vyššia alebo rovná nule"
 
 msgid "Quantity must be greater than {{ compared_value }}"
-msgstr "Množstvo musí byť väčšie ako {{compar_value}}"
+msgstr "Množstvo musí byť väčšie ako {{ compared_value }}"
 
 msgid "Region nesmí být delší než {{ limit }} znaků"
-msgstr "Región nesmie byť dlhšia ako {{limit}} znakov"
+msgstr "Región nesmie byť dlhšia ako {{ limit }} znakov"
 
 msgid "Store name cannot be longer than {{ limit }} characters"
-msgstr "Názov obchodu nesmie byť dlhší ako {{limit}} znakov"
+msgstr "Názov obchodu nesmie byť dlhší ako {{ limit }} znakov"
 
 msgid "Street name cannot be longer than {{ limit }} characters"
-msgstr "Názov ulice nesmie byť dlhší ako {{limit}} znakov"
+msgstr "Názov ulice nesmie byť dlhší ako {{ limit }} znakov"
 
 msgid "Tax number cannot be longer than {{ limit }} characters"
-msgstr "Daňové číslo nesmie byť dlhšie ako {{limit}} znakov"
+msgstr "Daňové číslo nesmie byť dlhšie ako {{ limit }} znakov"
 
 msgid "Telefonní číslo musí být platné"
 msgstr "Telefónne číslo musí byť platné"
@@ -182,7 +182,7 @@ msgid "Telefonní číslo musí začínat znakem +"
 msgstr "Telefónne číslo musí začínať znakom +"
 
 msgid "Telephone number cannot be longer than {{ limit }} characters"
-msgstr "Telefónne číslo nesmie byť dlhšie ako {{limit}} znakov"
+msgstr "Telefónne číslo nesmie byť dlhšie ako {{ limit }} znakov"
 
 msgid "This e-mail is already registered"
 msgstr "Tento e-mail je už registrovaný"
@@ -194,53 +194,52 @@ msgid "Vložené ID Youtube videa neobsahuje žádné video."
 msgstr "Vložené ID Youtube videa neobsahuje žiadne video."
 
 msgid "Vyberte prosím pobočku"
-msgstr "Vyberte prosím pobočku"
+msgstr "Vyberte pobočku"
 
 msgid "Vyplňte prosím SKU dárkového certifikátu."
-msgstr "Vyplňte prosím SKU darčekového certifikátu."
+msgstr "Vyplňte SKU darčekového poukazu."
 
 msgid "Vyplňte prosím deadline pro přijímání objednávek"
-msgstr "Vyplňte prosím deadline pre prijímanie objednávok"
+msgstr "Vyplňte deadline pre prijímanie objednávok"
 
 msgid "Vyplňte prosím jméno"
-msgstr "Vyplňte prosím meno"
+msgstr "Vyplňte meno"
 
 msgid "Vyplňte prosím množství."
-msgstr "Vyplňte prosím množstvo."
+msgstr "Vyplňte množstvo."
 
 msgid "Vyplňte prosím nominální hodnotu dárkového certifikátu."
-msgstr "Vyplňte prosím nominálnu hodnotu darčekového certifikátu."
+msgstr "Vyplňte nominálnu hodnotu darčekového poukazu."
 
 msgid "Vyplňte prosím nominální hodnotu slevy."
-msgstr "Vyplňte prosím nominálnu hodnotu zľavy."
+msgstr "Vyplňte nominálnu hodnotu zľavy."
 
 msgid "Vyplňte prosím počet dnů do dodání"
-msgstr "Vyplňte prosím počet dní do dodania"
+msgstr "Vyplňte počet dní do dodania"
 
 msgid "Vyplňte prosím příjmení"
-msgstr "Vyplňte prosím priezvisko"
+msgstr "Vyplňte priezvisko"
 
 msgid "Vyplňte prosím text tlačítka"
-msgstr "Vyplňte prosím text tlačidla"
+msgstr "Vyplňte text tlačidla"
 
 msgid "Vyplňte, prosím, PSČ prodejny"
-msgstr "Vyplňte, prosím, PSČ predajne"
+msgstr "Vyplňte PSČ predajne"
 
 msgid "Vyplňte, prosím, město prodejny"
-msgstr "Vyplňte, prosím, mesto predajne"
+msgstr "Vyplňte mesto predajne"
 
 msgid "Vyplňte, prosím, název prodejny"
-msgstr "Vyplňte, prosím, názov predajne"
+msgstr "Vyplňte názov predajne"
 
 msgid "Vyplňte, prosím, ulici prodejny"
-msgstr "Vyplňte, prosím, ulicu predajne"
+msgstr "Vyplňte ulicu predajne"
 
 msgid "You have to agree with privacy policy"
 msgstr "Musíte súhlasiť so zásadami ochrany osobných údajov"
 
 msgid "Zadejte prosím celé číslo."
-msgstr "Zadajte prosím celé číslo."
+msgstr "Zadajte celé číslo."
 
 msgid "Zip code cannot be longer than {{ limit }} characters"
-msgstr "PSČ nesmie byť dlhšie ako {{limit}} znakov"
-
+msgstr "PSČ nesmie byť dlhšie ako {{ limit }} znakov"
