--- a/translations/messages.cs.po
+++ b/translations/messages.cs.po
@@ -886,6 +886,9 @@ msgstr "Odhlásit se"
 msgid "Login"
 msgstr "Přihlášení"
 
+msgid "Magazín"
+msgstr "Magazín"
+
 msgid "Main variant"
 msgstr "Hlavní varianta"
 
